--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,11 @@ set(CMAKE_C_STANDARD 99)
 
 find_package(glfw3 CONFIG REQUIRED)
 find_package(unofficial-libmariadb CONFIG REQUIRED)
+find_package(CURL CONFIG REQUIRED)
 find_package(GDAL REQUIRED)
-add_executable(Glfw Glfw.c)
+find_package(Boost REQUIRED)
+find_package(unofficial-angle CONFIG REQUIRED)
+add_executable(Glfw GLFW/Glfw.c)
 add_executable(Query Query.c)
 add_executable(Variables Variables.c)
 add_executable(Printf Printf.c)
@@ -28,8 +31,15 @@ add_executable(ForLoops ForLoops.c)
 add_executable(ArraysAndNestedLoops ArraysAndNestedLoops.c)
 add_executable(MemoryAddresses MemoryAddresses.c)
 add_executable(Pointers Pointers.c)
-target_link_libraries(Glfw PRIVATE glfw)
-target_link_libraries(Query PRIVATE libmariadb mariadbclient)
-
+add_executable(DereferencingPointers DereferencingPointers.c)
+add_executable(WritingFiles WritingFiles.c)
+add_executable(ReadingFiles ReadingFiles.c)
+add_executable(getDataFromGithub WEBSCRAPER/getDataFromGithub.c)
+add_executable(GreatValue Applications/GreatValue.c)
 target_include_directories(Query PRIVATE ${GDAL_INCLUDE_DIRS})
+include_directories(getDataFromGithub  PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(Query PRIVATE ${GDAL_LIBRARIES})
+target_link_libraries(getDataFromGithub PUBLIC  CURL::libcurl)
+target_link_libraries(Glfw PUBLIC glfw)
+target_link_libraries(Query PUBLIC libmariadb mariadbclient)
+target_link_libraries(Glfw PRIVATE unofficial::angle::libEGL unofficial::angle::libANGLE unofficial::angle::libGLESv2 unofficial::angle::angle_common)
