--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(WritingFiles WritingFiles.c)
 add_executable(ReadingFiles ReadingFiles.c)
 add_executable(getDataFromGithub WEBSCRAPER/getDataFromGithub.c)
 add_executable(GreatValue Applications/GreatValue.c)
+add_executable( DigitalClock Applications/DigitalClock.c)
 target_include_directories(Query PRIVATE ${GDAL_INCLUDE_DIRS})
 include_directories(getDataFromGithub  PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(Query PRIVATE ${GDAL_LIBRARIES})
