--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,8 @@ add_executable(GreatValue Applications/GreatValue.c)
 add_executable( DigitalClock Applications/DigitalClock.c)
 add_executable(StudentRecordManagementSystem Applications/StudentRecordManagementSystem.c)
 add_executable(WinSock2 HackingTools/WinSock2.c)
+add_executable(server HackingTools/server.c)
+add_executable(client HackingTools/client.c)
 target_include_directories(Query PRIVATE ${GDAL_INCLUDE_DIRS})
 include_directories(getDataFromGithub  PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(Query PRIVATE ${GDAL_LIBRARIES})
